tests/paczka1/fuzzy1/47604983.err
Error in line 1: kLYfSdT7P0 S818 79,5
Error in line 2: kLYfSdT7P0 A504 28,1
Error in line 9: NZi S336 85,9
Error in line 22: obMUlqmQc0 S818 71,7
Error in line 23: A203 S336 60,8
